// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Attempting to ban a bot or team member Does not ban admins 1`] = `
{
  "content": "You do not have the permission to ban this user",
  "flags": 64,
}
`;

exports[`Attempting to ban a bot or team member Does not ban bots 1`] = `
{
  "content": "You do not have the permission to ban this user",
  "flags": 64,
}
`;

exports[`Attempting to ban a bot or team member Does not ban core 1`] = `
{
  "content": "You do not have the permission to ban this user",
  "flags": 64,
}
`;

exports[`Attempting to ban a bot or team member Does not ban maintainers 1`] = `
{
  "content": "You do not have the permission to ban this user",
  "flags": 64,
}
`;

exports[`Attempting to ban a bot or team member Does not ban moderators 1`] = `
{
  "content": "You do not have the permission to ban this user",
  "flags": 64,
}
`;

exports[`Attempting to log banned user in moderation log channel Sends log to the correct channel 1`] = `
{
  "embeds": [
    {
      "author": {
        "icon_url": "image.jpg",
        "name": "Ban | bad.spammer",
      },
      "color": 15747399,
      "fields": [
        {
          "inline": true,
          "name": "User",
          "value": "<@123>",
        },
        {
          "inline": true,
          "name": "Moderator",
          "value": "<@007>",
        },
        {
          "inline": true,
          "name": "Reason",
          "value": "Account is compromised and spamming phishing links.",
        },
      ],
      "footer": {
        "text": "ID: 123",
      },
      "timestamp": "2024-02-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`Banning spammer in automod channel Ban user if in the automod channel 1`] = `
{
  "deleteMessageSeconds": 0,
  "reason": "Account is compromised",
}
`;

exports[`Banning spammer in automod channel Ban user if in the automod channel 2`] = `
{
  "content": "Successfully banned <@123> for spam.",
  "flags": 64,
}
`;

exports[`Banning spammer in other channels Asks for confirmation if not in automod channel 1`] = `
{
  "components": [
    {
      "components": [
        {
          "custom_id": "keepMessages",
          "emoji": undefined,
          "label": "Don't delete messages",
          "style": 4,
          "type": 2,
        },
        {
          "custom_id": "deleteMessages",
          "emoji": undefined,
          "label": "Delete messages",
          "style": 4,
          "type": 2,
        },
        {
          "custom_id": "cancel",
          "emoji": undefined,
          "label": "Cancel",
          "style": 2,
          "type": 2,
        },
      ],
      "type": 1,
    },
  ],
  "content": "Would you like to delete messages from the user being banned?",
  "ephemeral": true,
  "withResponse": true,
}
`;

exports[`Banning spammer in other channels Bans user and deletes their messages if delete message button clicked 1`] = `
{
  "deleteMessageSeconds": 604800,
  "reason": "Account is compromised",
}
`;

exports[`Banning spammer in other channels Bans user and deletes their messages if delete message button clicked 2`] = `
{
  "components": [
    {
      "components": [
        {
          "custom_id": "keepMessages",
          "emoji": undefined,
          "label": "Don't delete messages",
          "style": 4,
          "type": 2,
        },
        {
          "custom_id": "deleteMessages",
          "emoji": undefined,
          "label": "Delete messages",
          "style": 4,
          "type": 2,
        },
        {
          "custom_id": "cancel",
          "emoji": undefined,
          "label": "Cancel",
          "style": 2,
          "type": 2,
        },
      ],
      "type": 1,
    },
  ],
  "content": "Would you like to delete messages from the user being banned?",
  "ephemeral": true,
  "withResponse": true,
}
`;

exports[`Banning spammer in other channels Bans user and does not delete their messages if keep message button clicked 1`] = `
{
  "deleteMessageSeconds": 0,
  "reason": "Account is compromised",
}
`;

exports[`Banning spammer in other channels Bans user and does not delete their messages if keep message button clicked 2`] = `
{
  "components": [
    {
      "components": [
        {
          "custom_id": "keepMessages",
          "emoji": undefined,
          "label": "Don't delete messages",
          "style": 4,
          "type": 2,
        },
        {
          "custom_id": "deleteMessages",
          "emoji": undefined,
          "label": "Delete messages",
          "style": 4,
          "type": 2,
        },
        {
          "custom_id": "cancel",
          "emoji": undefined,
          "label": "Cancel",
          "style": 2,
          "type": 2,
        },
      ],
      "type": 1,
    },
  ],
  "content": "Would you like to delete messages from the user being banned?",
  "ephemeral": true,
  "withResponse": true,
}
`;

exports[`Banning spammer in other channels Cancels the action if the cancel button is clicked 1`] = `
{
  "components": [
    {
      "components": [
        {
          "custom_id": "keepMessages",
          "emoji": undefined,
          "label": "Don't delete messages",
          "style": 4,
          "type": 2,
        },
        {
          "custom_id": "deleteMessages",
          "emoji": undefined,
          "label": "Delete messages",
          "style": 4,
          "type": 2,
        },
        {
          "custom_id": "cancel",
          "emoji": undefined,
          "label": "Cancel",
          "style": 2,
          "type": 2,
        },
      ],
      "type": 1,
    },
  ],
  "content": "Would you like to delete messages from the user being banned?",
  "ephemeral": true,
  "withResponse": true,
}
`;

exports[`Banning spammer in other channels Cancels the action if the response times out 1`] = `
{
  "components": [
    {
      "components": [
        {
          "custom_id": "keepMessages",
          "emoji": undefined,
          "label": "Don't delete messages",
          "style": 4,
          "type": 2,
        },
        {
          "custom_id": "deleteMessages",
          "emoji": undefined,
          "label": "Delete messages",
          "style": 4,
          "type": 2,
        },
        {
          "custom_id": "cancel",
          "emoji": undefined,
          "label": "Cancel",
          "style": 2,
          "type": 2,
        },
      ],
      "type": 1,
    },
  ],
  "content": "Would you like to delete messages from the user being banned?",
  "ephemeral": true,
  "withResponse": true,
}
`;

exports[`Banning spammer that has left the server Reacts with the correct emoji to automod message 1`] = `"✅"`;

exports[`Banning spammer that has left the server Sends back correct interaction reply to calling moderator 1`] = `
{
  "content": "Banned <@123> for spam but wasn't able to contact the user as they have left the server.",
  "flags": 64,
}
`;

exports[`Banning spammer who has DM set to private Discord ban api is called with the correct reason 1`] = `
{
  "deleteMessageSeconds": 0,
  "reason": "Account is compromised",
}
`;

exports[`Banning spammer who has DM set to private Reacts with the correct emoji 1`] = `"✅"`;

exports[`Banning spammer who has DM set to private Sends back correct interaction reply to calling moderator 1`] = `
{
  "content": "Banned <@123> for spam but wasn't able to contact the user.",
  "flags": 64,
}
`;

exports[`Banning spammer who has DM set to private Sends log to the correct channel 1`] = `
{
  "embeds": [
    {
      "author": {
        "icon_url": "image.jpg",
        "name": "Ban | bad.spammer",
      },
      "color": 15747399,
      "fields": [
        {
          "inline": true,
          "name": "User",
          "value": "<@123>",
        },
        {
          "inline": true,
          "name": "Moderator",
          "value": "<@007>",
        },
        {
          "inline": true,
          "name": "Reason",
          "value": "Account is compromised and spamming phishing links.",
        },
      ],
      "footer": {
        "text": "ID: 123",
      },
      "timestamp": "2024-02-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`Banning spammer with DM enabled Discord ban api is called with the correct reason 1`] = `
{
  "deleteMessageSeconds": 0,
  "reason": "Account is compromised",
}
`;

exports[`Banning spammer with DM enabled Discord ban api is called with the correct reason 2`] = `
{
  "content": "Successfully banned <@123> for spam.",
  "flags": 64,
}
`;

exports[`Banning spammer with DM enabled Discord message api is called with the correct message 1`] = `
{
  "content": "Your account has been banned. Please enable embeds in Discord settings if you cannot see the message below.",
  "embeds": [
    {
      "description": "Your account has been banned from The Odin Project Discord server for sending spam. If this account is compromised, please follow the steps linked in this [Discord support article about securing your account](https://support.discord.com/hc/en-us/articles/24160905919511-My-Discord-Account-was-Hacked-or-Compromised).

Once your account is secure, you may appeal your ban by emailing \`moderation@theodinproject.com\` with the following template:

- Banned username:
- Reason for ban:
- Date of ban:
- Steps taken to secure my account:
- Additional comments (optional):

Please note that it may take at least several days for our volunteer staff to process your request.",
      "title": "Banned: Compromised account / Spam",
    },
  ],
}
`;

exports[`Banning spammer with DM enabled Reacts with the correct emoji 1`] = `"✅"`;

exports[`Banning spammer with DM enabled Sends back correct interaction reply to calling moderator 1`] = `
{
  "content": "Successfully banned <@123> for spam.",
  "flags": 64,
}
`;

exports[`Banning spammer with DM enabled Sends log to the correct channel 1`] = `
{
  "embeds": [
    {
      "author": {
        "icon_url": "image.jpg",
        "name": "Ban | bad.spammer",
      },
      "color": 15747399,
      "fields": [
        {
          "inline": true,
          "name": "User",
          "value": "<@123>",
        },
        {
          "inline": true,
          "name": "Moderator",
          "value": "<@007>",
        },
        {
          "inline": true,
          "name": "Reason",
          "value": "Account is compromised and spamming phishing links.",
        },
      ],
      "footer": {
        "text": "ID: 123",
      },
      "timestamp": "2024-02-01T00:00:00.000Z",
    },
  ],
}
`;
